--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -105,7 +105,7 @@
 </p><p><span id="File:FreeCAD_Tree_view_hidden.png_Eye_symbol"></span>
 </p>
 <h3><span id=".D0.A1.D0.B8.D0.BC.D0.B2.D0.BE.D0.BB_.D0.BE.D0.BA.D0.BE"></span><span class="mw-headline" id="&#1057;&#1080;&#1084;&#1074;&#1086;&#1083;_&#1086;&#1082;&#1086;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_hidden.png&amp;filetimestamp=20240413200716&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_hidden.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1057;&#1080;&#1084;&#1074;&#1086;&#1083; &#1086;&#1082;&#1086;</span></h3>
-<p>&#1058;&#1086;&#1074;&#1072; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;, &#1095;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1098;&#1090; &#1097;&#1077; &#1073;&#1098;&#1076;&#1077; &#1089;&#1082;&#1088;&#1080;&#1090; &#1074; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072; &#1085;&#1072; &#1076;&#1098;&#1088;&#1074;&#1086;, &#1072;&#1082;&#1086; &#1086;&#1087;&#1094;&#1080;&#1103;&#1090;&#1072; <b>Show Items Hidden in Tree View</b> &#1086;&#1090; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086; &#1084;&#1077;&#1085;&#1102; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090; &#1080;&#1083;&#1080; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090; &#1085;&#1077; &#1077; &#1086;&#1090;&#1084;&#1077;&#1090;&#1085;&#1072;&#1090;&#1072;. &#1047;&#1072;&#1089;&#1077;&#1075;&#1085;&#1072;&#1090;&#1080; &#1089;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1080;&#1084;&#1072;&#1090; &#1089;&#1074;&#1086;&#1077; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; <span style="font-size:60%; padding-right:0.8em;">&#1042;&#1080;&#1076;</span><b>Show In Tree</b> &#1089;&#1098;&#1089; &#1089;&#1090;&#1086;&#1081;&#1085;&#1086;&#1089;&#1090; <code>false</code>. &#1058;&#1086;&#1074;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1077;&#1085;&#1086; &#1074; <a href="../Property_View.html" title="Property View">Property View</a> &#1080;&#1083;&#1080; &#1089; &#1086;&#1087;&#1094;&#1080;&#1103;&#1090;&#1072; <b>Toggle Visibility in Tree View</b> &#1074; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086; &#1084;&#1077;&#1085;&#1102; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;.
+<p>&#1058;&#1086;&#1074;&#1072; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;, &#1095;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1098;&#1090; &#1097;&#1077; &#1073;&#1098;&#1076;&#1077; &#1089;&#1082;&#1088;&#1080;&#1090; &#1074; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;, &#1072;&#1082;&#1086; &#1086;&#1087;&#1094;&#1080;&#1103;&#1090;&#1072; <b>Show Items Hidden in Tree View</b> &#1086;&#1090; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086; &#1084;&#1077;&#1085;&#1102; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072; &#1080;&#1083;&#1080; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072; &#1085;&#1077; &#1077; &#1086;&#1090;&#1084;&#1077;&#1090;&#1085;&#1072;&#1090;&#1072;. &#1047;&#1072;&#1089;&#1077;&#1075;&#1085;&#1072;&#1090;&#1080; &#1089;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1080;&#1084;&#1072;&#1090; &#1089;&#1074;&#1086;&#1077; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; <span style="font-size:60%; padding-right:0.8em;">&#1042;&#1080;&#1076;</span><b>Show In Tree</b> &#1089;&#1098;&#1089; &#1089;&#1090;&#1086;&#1081;&#1085;&#1086;&#1089;&#1090; <code>false</code>. &#1058;&#1086;&#1074;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1077;&#1085;&#1086; &#1074; <a href="../Property_View.html" title="Property View">Property View</a> &#1080;&#1083;&#1080; &#1089; &#1086;&#1087;&#1094;&#1080;&#1103;&#1090;&#1072; <b>Toggle Visibility in Tree View</b> &#1074; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086; &#1084;&#1077;&#1085;&#1102; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;.
 </p>
 <h3><span class="mw-headline" id="Cyan_ice_crystal"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_frozen.png&amp;filetimestamp=20240413201638&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_frozen.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Cyan ice crystal</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
@@ -175,12 +175,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123170105
+Cached time: 20260123170224
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.137 seconds
-Real time usage: 0.690 seconds
+CPU time usage: 0.131 seconds
+Real time usage: 0.190 seconds
 Preprocessor visited node count: 762/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
@@ -191,19 +191,19 @@ Unstrip post&#8208;expand size: 2385/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  175.649      1 -total
- 29.04%   51.000      1 Template:Std_Base_navi/bg
- 22.61%   39.719      3 Template:Navigation_menu_2
- 18.64%   32.738      1 Template:Interface_navi/bg
-  8.56%   15.031      2 Template:PropertyData
-  7.13%   12.523      1 Template:Userdocnavi/bg
-  5.25%    9.213      2 Template:Caption
-  5.06%    8.882      6 Template:MenuCommand
-  4.96%    8.718      3 Template:Variable
-  4.88%    8.580      1 Template:PropertyView
+100.00%   38.742      1 -total
+ 22.21%    8.606      1 Template:Std_Base_navi/bg
+ 19.50%    7.555      3 Template:Navigation_menu_2
+ 15.41%    5.971      1 Template:Interface_navi/bg
+ 12.98%    5.027      1 Template:Userdocnavi/bg
+ 10.16%    3.938      2 Template:PropertyData
+  7.37%    2.854      1 Template:PropertyView
+  7.01%    2.715      3 Template:Variable
+  4.55%    1.763     19 Template:KEY
+  4.25%    1.646      6 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123170104 and revision id 1743074. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123170224 and revision id 1743076. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
