--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -106,8 +106,9 @@
 </p>
 <h3><span id=".D0.A1.D0.B8.D0.BC.D0.B2.D0.BE.D0.BB_.D0.BE.D0.BA.D0.BE"></span><span class="mw-headline" id="&#1057;&#1080;&#1084;&#1074;&#1086;&#1083;_&#1086;&#1082;&#1086;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_hidden.png&amp;filetimestamp=20240413200716&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_hidden.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1057;&#1080;&#1084;&#1074;&#1086;&#1083; &#1086;&#1082;&#1086;</span></h3>
 <p>&#1058;&#1086;&#1074;&#1072; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;, &#1095;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1098;&#1090; &#1097;&#1077; &#1073;&#1098;&#1076;&#1077; &#1089;&#1082;&#1088;&#1080;&#1090; &#1074; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;, &#1072;&#1082;&#1086; &#1086;&#1087;&#1094;&#1080;&#1103;&#1090;&#1072; <b>Show Items Hidden in Tree View</b> &#1086;&#1090; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086; &#1084;&#1077;&#1085;&#1102; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072; &#1080;&#1083;&#1080; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072; &#1085;&#1077; &#1077; &#1086;&#1090;&#1084;&#1077;&#1090;&#1085;&#1072;&#1090;&#1072;. &#1047;&#1072;&#1089;&#1077;&#1075;&#1085;&#1072;&#1090;&#1080; &#1089;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1080;&#1084;&#1072;&#1090; &#1089;&#1074;&#1086;&#1077; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; <span style="font-size:60%; padding-right:0.8em;">&#1042;&#1080;&#1076;</span><b>Show In Tree</b> &#1089;&#1098;&#1089; &#1089;&#1090;&#1086;&#1081;&#1085;&#1086;&#1089;&#1090; <code>false</code>. &#1058;&#1086;&#1074;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1077;&#1085;&#1086; &#1074; <a href="../Property_View.html" title="Property View">Property View</a> &#1080;&#1083;&#1080; &#1089; &#1086;&#1087;&#1094;&#1080;&#1103;&#1090;&#1072; <b>Toggle Visibility in Tree View</b> &#1074; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086; &#1084;&#1077;&#1085;&#1102; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;.
+</p><p><span id="File:FreeCAD_Tree_view_frozen.png_Cyan_ice_crystal"></span>
 </p>
-<h3><span class="mw-headline" id="Cyan_ice_crystal"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_frozen.png&amp;filetimestamp=20240413201638&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_frozen.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Cyan ice crystal</span></h3>
+<h3><span id=".D0.9B.D0.B5.D0.B4.D0.B5.D0.BD_.D0.BA.D1.80.D0.B8.D1.81.D1.82.D0.B0.D0.BB_.D0.B2_.D1.86.D0.B2.D1.8F.D1.82_.D1.86.D0.B8.D0.B0.D0.BD"></span><span class="mw-headline" id="&#1051;&#1077;&#1076;&#1077;&#1085;_&#1082;&#1088;&#1080;&#1089;&#1090;&#1072;&#1083;_&#1074;_&#1094;&#1074;&#1103;&#1090;_&#1094;&#1080;&#1072;&#1085;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_frozen.png&amp;filetimestamp=20240413201638&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_frozen.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1051;&#1077;&#1076;&#1077;&#1085; &#1082;&#1088;&#1080;&#1089;&#1090;&#1072;&#1083; &#1074; &#1094;&#1074;&#1103;&#1090; &#1094;&#1080;&#1072;&#1085;</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </p><p>This indicates a <a href="../Std_ToggleFreeze.html" title="Std ToggleFreeze">frozen</a> object that is not recomputed when its parents change.
 </p>
@@ -175,13 +176,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123170224
+Cached time: 20260123170434
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.131 seconds
-Real time usage: 0.190 seconds
-Preprocessor visited node count: 762/1000000
+CPU time usage: 0.167 seconds
+Real time usage: 0.247 seconds
+Preprocessor visited node count: 763/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
 Highest expansion depth: 7/100
@@ -191,19 +192,19 @@ Unstrip post&#8208;expand size: 2385/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.742      1 -total
- 22.21%    8.606      1 Template:Std_Base_navi/bg
- 19.50%    7.555      3 Template:Navigation_menu_2
- 15.41%    5.971      1 Template:Interface_navi/bg
- 12.98%    5.027      1 Template:Userdocnavi/bg
- 10.16%    3.938      2 Template:PropertyData
-  7.37%    2.854      1 Template:PropertyView
-  7.01%    2.715      3 Template:Variable
-  4.55%    1.763     19 Template:KEY
-  4.25%    1.646      6 Template:MenuCommand
+100.00%   57.813      1 -total
+ 22.72%   13.134      1 Template:Std_Base_navi/bg
+ 21.24%   12.280      3 Template:Navigation_menu_2
+ 14.74%    8.520      1 Template:Interface_navi/bg
+ 10.89%    6.295      1 Template:Userdocnavi/bg
+  8.17%    4.723      2 Template:PropertyData
+  7.32%    4.233      2 Template:Caption
+  6.60%    3.815      1 Template:TOCright
+  6.36%    3.678      6 Template:MenuCommand
+  5.17%    2.989      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123170224 and revision id 1743076. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123170434 and revision id 1743078. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
