--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -176,12 +176,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123170434
+Cached time: 20260123170523
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.167 seconds
-Real time usage: 0.247 seconds
+CPU time usage: 0.161 seconds
+Real time usage: 0.223 seconds
 Preprocessor visited node count: 763/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
@@ -192,19 +192,19 @@ Unstrip post&#8208;expand size: 2385/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.813      1 -total
- 22.72%   13.134      1 Template:Std_Base_navi/bg
- 21.24%   12.280      3 Template:Navigation_menu_2
- 14.74%    8.520      1 Template:Interface_navi/bg
- 10.89%    6.295      1 Template:Userdocnavi/bg
-  8.17%    4.723      2 Template:PropertyData
-  7.32%    4.233      2 Template:Caption
-  6.60%    3.815      1 Template:TOCright
-  6.36%    3.678      6 Template:MenuCommand
-  5.17%    2.989      3 Template:Variable
+100.00%   53.247      1 -total
+ 23.66%   12.598      1 Template:Std_Base_navi/bg
+ 19.29%   10.269      3 Template:Navigation_menu_2
+ 15.74%    8.382      1 Template:Interface_navi/bg
+ 11.38%    6.057      1 Template:Userdocnavi/bg
+  9.57%    5.097      2 Template:PropertyData
+  6.62%    3.527      1 Template:TOCright
+  5.97%    3.181      3 Template:Variable
+  5.79%    3.085      2 Template:Caption
+  5.00%    2.665     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123170434 and revision id 1743078. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123170523 and revision id 1743078. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
