--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -111,8 +111,9 @@
 <h3><span id=".D0.9B.D0.B5.D0.B4.D0.B5.D0.BD_.D0.BA.D1.80.D0.B8.D1.81.D1.82.D0.B0.D0.BB_.D0.B2_.D1.86.D0.B2.D1.8F.D1.82_.D1.86.D0.B8.D0.B0.D0.BD"></span><span class="mw-headline" id="&#1051;&#1077;&#1076;&#1077;&#1085;_&#1082;&#1088;&#1080;&#1089;&#1090;&#1072;&#1083;_&#1074;_&#1094;&#1074;&#1103;&#1090;_&#1094;&#1080;&#1072;&#1085;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_frozen.png&amp;filetimestamp=20240413201638&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_frozen.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1051;&#1077;&#1076;&#1077;&#1085; &#1082;&#1088;&#1080;&#1089;&#1090;&#1072;&#1083; &#1074; &#1094;&#1074;&#1103;&#1090; &#1094;&#1080;&#1072;&#1085;</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </p><p>&#1058;&#1086;&#1074;&#1072; &#1086;&#1079;&#1085;&#1072;&#1095;&#1072;&#1074;&#1072; &#1079;&#1072;&#1084;&#1088;&#1072;&#1079;&#1077;&#1085; <a href="../Std_ToggleFreeze.html" title="Std ToggleFreeze">frozen</a> &#1086;&#1073;&#1077;&#1082;&#1090;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1085;&#1077; &#1089;&#1077; &#1087;&#1088;&#1077;&#1080;&#1079;&#1095;&#1080;&#1089;&#1083;&#1103;&#1074;&#1072;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1085;&#1077;&#1075;&#1086;&#1074;&#1080;&#1090;&#1077; &#1088;&#1086;&#1076;&#1080;&#1090;&#1077;&#1083;&#1080; &#1089;&#1077; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1103;&#1090;.
+</p><p><span id="Preferences"></span>
 </p>
-<h2><span class="mw-headline" id="Preferences">Preferences</span></h2>
+<h2><span id=".D0.9F.D1.80.D0.B5.D0.B4.D0.BF.D0.BE.D1.87.D0.B8.D1.82.D0.B0.D0.BD.D0.B8.D1.8F"></span><span class="mw-headline" id="&#1055;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;">&#1055;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;</span></h2>
 <p>See <a href="../Combo_View.html#Preferences" title="Combo View">Combo View</a>.
 </p><p><br>
 </p>
@@ -176,13 +177,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123170714
+Cached time: 20260123170746
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.147 seconds
-Real time usage: 0.441 seconds
-Preprocessor visited node count: 763/1000000
+CPU time usage: 0.144 seconds
+Real time usage: 0.302 seconds
+Preprocessor visited node count: 764/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
 Highest expansion depth: 7/100
@@ -192,19 +193,19 @@ Unstrip post&#8208;expand size: 2385/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  109.708      1 -total
- 40.22%   44.122      1 Template:FALSE
- 13.32%   14.611      1 Template:Userdocnavi/bg
-  9.87%   10.827      1 Template:Interface_navi/bg
-  9.50%   10.419      1 Template:Std_Base_navi/bg
-  8.46%    9.280      3 Template:Navigation_menu_2
-  7.22%    7.920      2 Template:PropertyData
-  5.45%    5.974      1 Template:PropertyView
-  4.63%    5.074      3 Template:Variable
-  3.35%    3.671      2 Template:Caption
+100.00%   58.464      1 -total
+ 30.24%   17.682      1 Template:Interface_navi/bg
+ 24.93%   14.577      3 Template:Navigation_menu_2
+ 17.07%    9.977      1 Template:Std_Base_navi/bg
+ 12.54%    7.329      1 Template:Userdocnavi/bg
+  8.04%    4.703      2 Template:PropertyData
+  4.96%    2.898     19 Template:KEY
+  4.62%    2.698      3 Template:Variable
+  4.45%    2.603      1 Template:PropertyView
+  3.54%    2.070      5 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123170714 and revision id 1743081. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123170745 and revision id 1743083. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
