--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -8,7 +8,7 @@
 <li><a href="../pt-br/Tree_View.html" class="mw-pt-progress mw-pt-progress--low" title="Vista em &aacute;rvore (2% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../sv/Tree_View.html" class="mw-pt-progress mw-pt-progress--low" title="Tree View/sv (2% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><a href="../cs/Tree_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Stromov&eacute; zobrazen&iacute; (100% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Tree_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#1044;&#1088;&#1077;&#1074;&#1086; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072; (94% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Tree_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#12484;&#12522;&#12540;&#12499;&#12517;&#12540; (94% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Tree_View.html" class="mw-pt-progress mw-pt-progress--med" title="&#45208;&#47924; &#48372;&#44592;(Tree view) (69% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -114,7 +114,7 @@
 </p><p><span id="Preferences"></span>
 </p>
 <h2><span id=".D0.9F.D1.80.D0.B5.D0.B4.D0.BF.D0.BE.D1.87.D0.B8.D1.82.D0.B0.D0.BD.D0.B8.D1.8F"></span><span class="mw-headline" id="&#1055;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;">&#1055;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;</span></h2>
-<p>See <a href="../Combo_View.html#Preferences" title="Combo View">Combo View</a>.
+<p>&#1042;&#1080;&#1078;&#1090;&#1077; <a href="../Combo_View.html#Preferences" title="Combo View">Combo View</a>.
 </p><p><br>
 </p>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
@@ -177,35 +177,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123170746
+Cached time: 20260123170805
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.144 seconds
-Real time usage: 0.302 seconds
+CPU time usage: 0.161 seconds
+Real time usage: 0.228 seconds
 Preprocessor visited node count: 764/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2385/5000000 bytes
+Unstrip post&#8208;expand size: 2389/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   58.464      1 -total
- 30.24%   17.682      1 Template:Interface_navi/bg
- 24.93%   14.577      3 Template:Navigation_menu_2
- 17.07%    9.977      1 Template:Std_Base_navi/bg
- 12.54%    7.329      1 Template:Userdocnavi/bg
-  8.04%    4.703      2 Template:PropertyData
-  4.96%    2.898     19 Template:KEY
-  4.62%    2.698      3 Template:Variable
-  4.45%    2.603      1 Template:PropertyView
-  3.54%    2.070      5 Template:Version
+100.00%   61.353      1 -total
+ 30.71%   18.844      1 Template:Std_Base_navi/bg
+ 27.41%   16.815      3 Template:Navigation_menu_2
+ 23.00%   14.111      1 Template:Interface_navi/bg
+ 11.22%    6.886      1 Template:Userdocnavi/bg
+  7.94%    4.872      2 Template:PropertyData
+  4.48%    2.747      2 Template:Caption
+  4.44%    2.724      3 Template:Variable
+  3.38%    2.073      1 Template:PropertyView
+  3.35%    2.058      6 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123170745 and revision id 1743083. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123170805 and revision id 1743085. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
