--- a/wiki/bg/User_hub.html
+++ b/wiki/bg/User_hub.html
@@ -57,7 +57,7 @@
 <p><span id="Basic_application"></span>
 </p>
 <h3><span id=".D0.9E.D1.81.D0.BD.D0.BE.D0.B2.D0.BD.D0.B0_.D0.A3.D0.BF.D0.BE.D1.82.D1.80.D0.B5.D0.B1.D0.B0"></span><span class="mw-headline" id="&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1072;_&#1059;&#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1072;">&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1072; &#1059;&#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1072;</span></h3>
-<ul><li><a href="../bg/Interface.html" title="Interface/bg">&#1048;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;</a>: &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1098;&#1090; &#1085;&#1072; FreeCAD &#1077; &#1089;&#1098;&#1089;&#1090;&#1072;&#1074;&#1077;&#1085; &#1086;&#1090; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1075;&#1088;&#1072;&#1092;&#1080;&#1095;&#1085;&#1080; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080; &#1085;&#1072; &#1077;&#1082;&#1088;&#1072;&#1085;&#1072;, &#1074;&#1082;&#1083;&#1102;&#1095;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086; <a href="../bg/3D_View.html" title="3D View/bg">3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</a>, <a href="../index.php?title=Tree_view/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Tree view/bg (page does not exist)">&#1044;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1077;&#1085; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</a>,  <a href="../Property_editor.html" class="mw-redirect" title="Property editor">property editor</a>,  <a href="../Task_panel.html" class="mw-redirect" title="Task panel">task panel</a>, &#1080; <a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a>.</li>
+<ul><li><a href="../bg/Interface.html" title="Interface/bg">&#1048;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;</a>: &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1098;&#1090; &#1085;&#1072; FreeCAD &#1077; &#1089;&#1098;&#1089;&#1090;&#1072;&#1074;&#1077;&#1085; &#1086;&#1090; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1075;&#1088;&#1072;&#1092;&#1080;&#1095;&#1085;&#1080; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080; &#1085;&#1072; &#1077;&#1082;&#1088;&#1072;&#1085;&#1072;, &#1074;&#1082;&#1083;&#1102;&#1095;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086; <a href="../bg/3D_View.html" title="3D View/bg">3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</a>, <a href="../bg/Tree_View.html" title="Tree View/bg">&#1044;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1077;&#1085; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</a>,  <a href="../Property_editor.html" class="mw-redirect" title="Property editor">property editor</a>,  <a href="../Task_panel.html" class="mw-redirect" title="Task panel">task panel</a>, &#1080; <a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a>.</li>
 <li><a href="../bg/Mouse_navigation.html" title="Mouse navigation/bg">&#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;</a>: &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1074;&#1080;&#1076;&#1086;&#1074;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; &#1080;&#1083;&#1080; &#1090;&#1088;&#1072;&#1082;&#1087;&#1072;&#1076;&#1072; &#1079;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1074; 3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072;.</li>
 <li><a href="../Selection_methods.html" title="Selection methods">Selection methods</a>: &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1084;&#1077;&#1090;&#1086;&#1076;&#1080; &#1079;&#1072; &#1080;&#1079;&#1073;&#1086;&#1088; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074; &#1089;&#1086;&#1092;&#1090;&#1091;&#1077;&#1088;&#1072;.</li>
 <li><a href="../Object_name.html" title="Object name">Objects naming</a>: FreeCAD &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077; &#1080;&#1084;&#1072;&#1090; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087;&#1085;&#1086; &#1089;&#1072;&#1084;&#1086; &#1079;&#1072; &#1095;&#1077;&#1090;&#1077;&#1085;&#1077; <code>Name</code> &#1082;&#1086;&#1080;&#1090;&#1086; &#1077;&#1076;&#1085;&#1086;&#1079;&#1085;&#1072;&#1095;&#1085;&#1086; &#1075;&#1080; &#1080;&#1076;&#1077;&#1085;&#1090;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072;, &#1080; <code>Label</code>, &#1082;&#1086;&#1077;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1077; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072; &#1086;&#1090; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1103;.</li>
@@ -136,12 +136,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123171016
+Cached time: 20260123171122
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.125 seconds
-Real time usage: 0.454 seconds
+CPU time usage: 0.143 seconds
+Real time usage: 0.368 seconds
 Preprocessor visited node count: 293/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
@@ -152,17 +152,17 @@ Unstrip post&#8208;expand size: 4280/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.059      1 -total
- 34.71%   15.294      1 Template:Userdocnavi/bg
- 21.02%    9.262      1 Template:TOCright
- 18.42%    8.116      1 Template:Navigation_menu_2
- 17.17%    7.563      7 Template:Incode
- 10.67%    4.703      2 Template:VersionMinus
-  4.16%    1.832      3 Template:Version
-  3.37%    1.484      1 Template:Button
+100.00%   49.747      1 -total
+ 28.50%   14.177      1 Template:Button
+ 26.68%   13.271      1 Template:Userdocnavi/bg
+ 21.04%   10.465      2 Template:VersionMinus
+ 17.30%    8.604      1 Template:Navigation_menu_2
+  9.61%    4.781      7 Template:Incode
+  6.08%    3.026      3 Template:Version
+  5.28%    2.625      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260123171015 and revision id 1743087. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260123171122 and revision id 1743089. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
